objects/Castlight_Opportunity__c.object
<CustomObject>
    <description>Object to store opportunity data received from Castlight</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Castlight Opportunities</relationshipLabel>
        <relationshipName>Castlight_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLT_Account_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT Account Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLT_Acnt_Owner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT Account Owner Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLT_OE_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT OE End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSLT_OE_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT OE Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSLT_OE_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT OE Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLT_Opp_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSLT_Opportunity_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CSLT Opportunity Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLT_Opportunity_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSLT Opportunity Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Castlight Opportunities</relationshipLabel>
        <relationshipName>Castlight_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Org_Name__c</fullName>
        <description>Anthem Salesforce org name for data sent to Castlight (Com1/Com2)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SF Org Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <label>Salesforce URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <label>Castlight Opportunity</label>
    <nameField>
        <displayFormat>CSLTOpp-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Castlight Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>